test/analyze/match/all_patterns.exp
Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:9:6-18
 9 |   val Tup1 (x | x) = Tup1 (1);
   |       ^^^^^^^^^^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:9:16
 9 |   val Tup1 (x | x) = Tup1 (1);
   |                 ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:15:2-14
 15 |   Tup1 (x | x) = Tup1 (y);
    |   ^^^^^^^^^^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:15:12
 15 |   Tup1 (x | x) = Tup1 (y);
    |             ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:20:7-19
 20 |   for (Tup1 (x | x) in [Tup1 (1)]) {}
    |        ^^^^^^^^^^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:20:17
 20 |   for (Tup1 (x | x) in [Tup1 (1)]) {}
    |                  ^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:25:31
 25 |   if (Tup1 (1) match Tup1 (x | x)) {}
    |                                ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:29:10-31:3
 29 | /   var x = match (Tup1 (1)) {
    | |           ^^^^^^^^^^^^^^^^^^
 30 | |     | Tup1 (x | x) -> 1
    | | ^^^^^^^^^^^^^^^^^^^^^^^
 31 | |   };
    | \ ^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:30:16
 30 |     | Tup1 (x | x) -> 1
    |                 ^

Error: Inexhaustive pattern matching. For example the pattern `Tup2 _` is not matched.
test/analyze/match/all_patterns.myte:33:6-35:3
 33 | /   x = match (Tup1 (1)) {
    | |       ^^^^^^^^^^^^^^^^^^
 34 | |     | Tup1 (x | x) -> 1
    | | ^^^^^^^^^^^^^^^^^^^^^^^
 35 | |   };
    | \ ^^^

Error: Unreachable pattern
test/analyze/match/all_patterns.myte:34:16
 34 |     | Tup1 (x | x) -> 1
    |                 ^